added language i18n controll

--- a/config/dev-css/base.less
+++ b/config/dev-css/base.less
@@ -19,14 +19,14 @@
 /* Loader File */
 @import "loader.less";
 
-/* custom theme for components */
-@import (less) "demopages.css";
-
 /* Internal dev theme css file */
 @import (less) "./../../config/theme/css/datatables-theme.css";
 @import (less) "./../../config/theme/css/summernote-theme.css";
 @import (less) "./../../config/theme/css/fonts-theme.css";
 @import (less) "./../../config/theme/css/yeti.css";
 @import (less) "./../../config/theme/css/theme.css";
+@import (less) "./../../config/theme/css/error.css";
 @import (less) "./../../config/theme/css/cd-tabs.css";
+@import (less) "./../../config/theme/css/lock.css";
+@import (less) "./../../config/theme/css/login.css";
 @import (less) "./../../config/theme/css/user-profile.css";
