--- a/views/acl/lock.hbs
+++ b/views/acl/lock.hbs
@@ -6,7 +6,7 @@
 			<div class="row">
 				<div class="col-md-6">
 					<div class="locked-text">
-						LOCKED
+						{{{__ "LOCKED"}}}
 					</div>
 					<div class="lock-user-pic">
 						<a href="#"><img src="/images/avatar.png" alt="" class="img-responsive" /></a>
@@ -19,7 +19,7 @@
 					<div class="unlock-form">
 						<h5>Jelmer Stoker</h5>
 						<p>Programmer A.F.K.</p>
-						<input type="password" class="form-control" placeholder="password here...">
+						<input type="password" class="form-control" placeholder="{{{__ 'password here...'}}}">
 					</div>
 				</div>
 			</div>
