--- a/views/bodies/faq.hbs
+++ b/views/bodies/faq.hbs
@@ -8,7 +8,7 @@
             </div>
             <div id="question2" class="panel-collapse collapse" style="height: 0px;">
               <div class="panel-body">
-                    <h5><span class="label label-primary">Answer</span></h5>
+                    <h5><span class="label label-primary">{{{__ "Answer"}}}</span></h5>
                     <p>A template is a complete package that is deployable to any standard Web server.
 
 A single template usually contains multiple pages with various types of functionality. A template contains a broad set of features, whereas a snippet generally demonstrates a single feature. Templates usually maintain there own CSS and JavaScript asset files, except for those assets that are hosted on an external CDN. </p>
@@ -22,7 +22,7 @@ A single template usually contains multiple pages with various types of function
             </div>
             <div id="question3" class="panel-collapse collapse" style="height: 0px;">
               <div class="panel-body">
-                    <h5><span class="label label-primary">Answer</span></h5>
+                    <h5><span class="label label-primary">{{{__ "Answer"}}}</span></h5>
                     <p>The free bundle is ~64 MB and the premium (ultimate) bundle is ~133 MB.</p>
               </div>
             </div>
@@ -34,7 +34,7 @@ A single template usually contains multiple pages with various types of function
             </div>
             <div id="question4" class="panel-collapse collapse" style="height: 0px;">
               <div class="panel-body">
-                    <h5><span class="label label-primary">Answer</span></h5>
+                    <h5><span class="label label-primary">{{{__ "Answer"}}}</span></h5>
                     <p>The term "Theme" is overused, and often mistaken for a working "Template". There are numerous
 theme Websites that in fact market working templates and not just a "Theme". In this context, a Theme is only the style layer or "skin". A theme is defined by a CSS (LESS or SASS) stylesheet
 that is designed for use withing a snippet or template. "Templates" are often used to demonstrate
@@ -49,7 +49,7 @@ that is designed for use withing a snippet or template. "Templates" are often us
             </div>
             <div id="question5" class="panel-collapse collapse" style="height: 0px;">
               <div class="panel-body">
-                    <h5><span class="label label-primary">Answer</span></h5>
+                    <h5><span class="label label-primary">{{{__ "Answer"}}}</span></h5>
                     <p>A template contains a broad set of features, whereas a snippet generally demonstrates a single feature. A "snippet" may demonstrate any type of functionality, but usually with a singular purpose.
 This includes anything from a few simple lines of HTML, to a complete working component such as the AngularJS ToDo MVC example. As a general rule, snippets do not contain multi-page or templating features. Additionally, snippets assets (images and require css/js dependencies) are referenced from an external location, usually from a CDN (ie; MaxCDN or JSCDN) since these are optimized for performance and host many common
 libaries and microframeworks.</p>
@@ -63,7 +63,7 @@ libaries and microframeworks.</p>
             </div>
             <div id="question6" class="panel-collapse collapse" style="height: 0px;">
               <div class="panel-body">
-                    <h5><span class="label label-primary">Answer</span></h5>
+                    <h5><span class="label label-primary">{{{__ "Answer"}}}</span></h5>
                     <p>The free bundle contains some the best offerings that are currently available for the latest Bootstrap 3 (yes, goodbye 2.x). We've brought them all together in a single bundle as fully integrated, working components.
 <br><br>
 The premium bundle includes even more components and integrated examples. Additionally it contains a collection of premium templates and examples that are exclusive to BootBundle, and are not freely available elsewhere. These exclusing templates compare to those being sold at a higher cost on theme marketplaces such as ThemeForest and WrapBootsrap. When you buy any premium offering, you're buying the service and maintainence that goes along with it. BootBundle is no exception. While you can find and download many of the BootBundle components individually, you won't find integrated examples that bring all together.
@@ -81,7 +81,7 @@ What is the license?</a>
             </div>
             <div id="question7" class="panel-collapse collapse" style="height: 0px;">
               <div class="panel-body">
-                    <h5><span class="label label-primary">Answer</span></h5>
+                    <h5><span class="label label-primary">{{{__ "Answer"}}}</span></h5>
                     <p>Each component (unit in the bundle) has it's own license terms. Most are MIT, CC and GNU Public.</p>
               </div>
             </div>
@@ -93,7 +93,7 @@ What is the license?</a>
             </div>
             <div id="question8" class="panel-collapse collapse" style="height: 0px;">
               <div class="panel-body">
-                    <h5><span class="label label-primary">Answer</span></h5>
+                    <h5><span class="label label-primary">{{{__ "Answer"}}}</span></h5>
                     <p>In short, it depends. BootBundle will be re-released when a significant number of components change and release new features.</p>
               </div>
             </div>
@@ -105,7 +105,7 @@ What is the license?</a>
             </div>
             <div id="question9" class="panel-collapse collapse" style="height: 0px;">
               <div class="panel-body">
-                    <h5><span class="label label-primary">Answer</span></h5>
+                    <h5><span class="label label-primary">{{{__ "Answer"}}}</span></h5>
                     <p>Downloads are made available via the SendOwl Digital Goods Service.</p>
               </div>
             </div>
@@ -117,7 +117,7 @@ What is the license?</a>
             </div>
             <div id="question10" class="panel-collapse collapse" style="height: 0px;">
               <div class="panel-body">
-                    <h5><span class="label label-primary">Answer</span></h5>
+                    <h5><span class="label label-primary">{{{__ "Answer"}}}</span></h5>
                     <p>Yes, you can download the up to 3 times per month. After a month you''ll need to contact us to obtain a new download link.</p>
               </div>
             </div>
@@ -129,7 +129,7 @@ What is the license?</a>
             </div>
             <div id="question11" class="panel-collapse collapse" style="height: 0px;">
               <div class="panel-body">
-                    <h5><span class="label label-primary">Answer</span></h5>
+                    <h5><span class="label label-primary">{{{__ "Answer"}}}</span></h5>
                     <p>Support is provided on the bundle as a whole, and downloading it. <a href="#" data-target="#modalContact" data-toggle="modal">Just contact us</a>. However, bundle components are supported by their individual author / creator.</p>
               </div>
             </div>
@@ -141,7 +141,7 @@ What is the license?</a>
             </div>
             <div id="question12" class="panel-collapse collapse" style="height: 0px;">
               <div class="panel-body">
-                    <h5><span class="label label-primary">Answer</span></h5>
+                    <h5><span class="label label-primary">{{{__ "Answer"}}}</span></h5>
                     <p>You will get notified of any updates for the specific bundle you've downloaded/purchased. Updates on the premium bundle are free for 1 year including all minor releases. For major version releases (eg. when Bootstrap 4 is released) there will be a lesser cost upgrade option.</p>
               </div>
             </div>
@@ -153,7 +153,7 @@ What is the license?</a>
             </div>
             <div id="question13" class="panel-collapse collapse" style="height: 0px;">
               <div class="panel-body">
-                    <h5><span class="label label-primary">Answer</span></h5>
+                    <h5><span class="label label-primary">{{{__ "Answer"}}}</span></h5>
                     <p>Affiliates earn 15% of sales referred to BootBundle purchases. You can sign-up for our affiliate program <a href="https://www.sendowl.com/programs/7077/join/969c04f1b7">here at SendOwl</a></p>
               </div>
             </div>
