--- a/views/layouts/clean.hbs
+++ b/views/layouts/clean.hbs
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <title>{{{__ "Plexus"}}}</title>   
-    <link rel="apple-touch-icon" sizes="57x57" href="/images/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/images/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/images/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/images/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/images/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/images/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/images/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/images/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="/images/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/images/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
-    <link rel="manifest" href="/images/manifest.json">
+    <link rel="apple-touch-icon" sizes="57x57" href="/favicons/images/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/favicons/images/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/favicons/images/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/favicons/images/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/favicons/images/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/favicons/images/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/favicons/images/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/favicons/images/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicons/images/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/favicons/images/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicons/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicons/images/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicons/images/favicon-16x16.png">
+    <link rel="manifest" href="/favicons/images/manifest.json">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
@@ -32,7 +32,7 @@
 </head>
 <body class="preload">
     <header class="cd-main-header">
-        <a href="/" class="cd-logo"><img src="/images/cd-logo.svg" alt="Logo"></a>
+        <a href="/" class="cd-logo"><img src="/images/logo.png" id="logoImg" alt="Logo"></a>
     </header> <!-- .cd-main-header -->
     <main class="main-content">
         <div class="content-wrapper">
