--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <title>{{{__ "Plexus"}}}</title>   
-    <link rel="apple-touch-icon" sizes="57x57" href="/images/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/images/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/images/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/images/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/images/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/images/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/images/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/images/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="/images/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/images/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
-    <link rel="manifest" href="/images/manifest.json">
+    <link rel="apple-touch-icon" sizes="57x57" href="/favicons/images/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/favicons/images/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/favicons/images/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/favicons/images/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/favicons/images/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/favicons/images/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/favicons/images/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/favicons/images/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicons/images/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="/favicons/images/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicons/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicons/images/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicons/images/favicon-16x16.png">
+    <link rel="manifest" href="/favicons/images/manifest.json">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
@@ -33,17 +33,17 @@
 <body class="preload">
     <header class="main-header">
         <nav class="navbar" role="navigation">
-        <a href="/" class="logo"><img src="/images/logo.png" id="logoImg"/><span class="title">Plexus</span></a>
+        <a href="/" class="logo"><img src="/images/logo.png" id="logoImg"/><span class="title">{{{__ 'Plexus'}}}</span></a>
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed pull-left" data-toggle="collapse" data-target="#leftmenu" aria-expanded="false" aria-controls="navbar">
-                  <span class="sr-only">Toggle search</span>
+                  <span class="sr-only">{{{__ 'Toggle search'}}}</span>
                   <span class="icon-bar top-bar"></span>
                   <span class="icon-bar middle-bar"></span>
                   <span class="icon-bar bottom-bar"></span>
                 </button>
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#rightmenu" aria-expanded="false" aria-controls="navbar">
-                  <span class="sr-only">Toggle links</span>
+                  <span class="sr-only">{{{__ 'Toggle links'}}}</span>
                   <span class="icon-bar top-bar"></span>
                   <span class="icon-bar middle-bar"></span>
                   <span class="icon-bar bottom-bar"></span>
@@ -58,7 +58,7 @@
                 <li>
                     <form class="navbar-left" action="#0" role="search">
                         <div class="search">
-                            <input type="search" placeholder="Search...">
+                            <input type="search" placeholder="{{{__ 'Search...'}}}">
                         </div> <!-- cd-search -->
                     </form>
                 </li>
