--- a/views/layouts/partials/footer.hbs
+++ b/views/layouts/partials/footer.hbs
@@ -1,3 +1,3 @@
 <footer id="footer"> 
-  	  	  &copy; 2015 Plexus. <a href="http://stokstylez.nl">Boilerplate</a> by JB Stoker  
+  	  	  &copy; 2015 Plexus. <a href="http://stokstylez.nl">Boilerplate</a> {{{__ 'by'}}} JB Stoker  
 </footer>
