--- a/views/layouts/sidebar.hbs
+++ b/views/layouts/sidebar.hbs
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" class="no-js">
+<html lang="nl">
   <head>
     <title>{{{__ "Plexus"}}}</title>   
-    <link rel="apple-touch-icon" sizes="57x57" href="/images/apple-icon-57x57.png">
-  	<link rel="apple-touch-icon" sizes="60x60" href="/images/apple-icon-60x60.png">
-  	<link rel="apple-touch-icon" sizes="72x72" href="/images/apple-icon-72x72.png">
-  	<link rel="apple-touch-icon" sizes="76x76" href="/images/apple-icon-76x76.png">
-  	<link rel="apple-touch-icon" sizes="114x114" href="/images/apple-icon-114x114.png">
-  	<link rel="apple-touch-icon" sizes="120x120" href="/images/apple-icon-120x120.png">
-  	<link rel="apple-touch-icon" sizes="144x144" href="/images/apple-icon-144x144.png">
-  	<link rel="apple-touch-icon" sizes="152x152" href="/images/apple-icon-152x152.png">
-  	<link rel="apple-touch-icon" sizes="180x180" href="/images/apple-icon-180x180.png">
-  	<link rel="icon" type="image/png" sizes="192x192"  href="/images/android-icon-192x192.png">
-  	<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
-  	<link rel="icon" type="image/png" sizes="96x96" href="/images/favicon-96x96.png">
-  	<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="/favicons/images/apple-icon-57x57.png">
+  	<link rel="apple-touch-icon" sizes="60x60" href="/favicons/images/apple-icon-60x60.png">
+  	<link rel="apple-touch-icon" sizes="72x72" href="/favicons/images/apple-icon-72x72.png">
+  	<link rel="apple-touch-icon" sizes="76x76" href="/favicons/images/apple-icon-76x76.png">
+  	<link rel="apple-touch-icon" sizes="114x114" href="/favicons/images/apple-icon-114x114.png">
+  	<link rel="apple-touch-icon" sizes="120x120" href="/favicons/images/apple-icon-120x120.png">
+  	<link rel="apple-touch-icon" sizes="144x144" href="/favicons/images/apple-icon-144x144.png">
+  	<link rel="apple-touch-icon" sizes="152x152" href="/favicons/images/apple-icon-152x152.png">
+  	<link rel="apple-touch-icon" sizes="180x180" href="/favicons/images/apple-icon-180x180.png">
+  	<link rel="icon" type="image/png" sizes="192x192"  href="/favicons/images/android-icon-192x192.png">
+  	<link rel="icon" type="image/png" sizes="32x32" href="/favicons/images/favicon-32x32.png">
+  	<link rel="icon" type="image/png" sizes="96x96" href="/favicons/images/favicon-96x96.png">
+  	<link rel="icon" type="image/png" sizes="16x16" href="/favicons/images/favicon-16x16.png">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
   	<meta name="msapplication-TileColor" content="#ffffff">
   	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
@@ -29,15 +29,15 @@
 </head>
 <body class="preload">
   <header class="cd-main-header">
-    <a href="/" class="cd-logo"><img src="/images/logo.png" id="logoImg"/><span class="title">Plexus</span></a>
+    <a href="/" class="cd-logo"><img src="/images/logo.png" id="logoImg"/><span class="title">{{{__ 'Plexus'}}}</span></a>
     <div class="cd-search is-hidden">
       <form action="#0">
-        <input type="search" placeholder="Search...">
+        <input type="search" placeholder="{{{__ 'Search...'}}}">
       </form>
     </div> <!-- cd-search -->
     <a id="nav-side-toggle" href="#"><span></span></a>
     <button type="button" class="navbar-toggle collapsed cd-nav-trigger">
-          <span class="sr-only">Toggle Sidebar</span>
+          <span class="sr-only">{{{__ 'Toggle Sidebar'}}}</span>
           <span class="icon-bar top-bar"></span>
           <span class="icon-bar middle-bar"></span>
           <span class="icon-bar bottom-bar"></span>
