--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -1,6 +1,6 @@
 <div class="container">
         <div class="row">
-            <button class="btn btn-sm btn-warning" id="saveChanges">Save Changes</button> <input type="checkbox" class="input-sm" data-height="30px" data-toggle="toggle" data-on="<svg style='height:20px' class='icon-edit-3'><use xlink:href='/fonts/icons.svg#icon-edit-3'></use></svg>" data-off="<svg style='height:20px' class='icon-preview-1'><use xlink:href='/fonts/icons.svg#icon-preview-1'></use></svg>" data-offstyle="primary" data-size="mini" data-style="pull-right icon-toggle" data-onstyle="warning" id="editProfile"/>
+            <button class="btn btn-sm btn-warning" id="saveChanges">{{{__ "Save Changes"}}}</button> <input type="checkbox" class="input-sm" data-height="30px" data-toggle="toggle" data-on="<svg style='height:20px' class='icon-edit-3'><use xlink:href='/fonts/icons.svg#icon-edit-3'></use></svg>" data-off="<svg style='height:20px' class='icon-preview-1'><use xlink:href='/fonts/icons.svg#icon-preview-1'></use></svg>" data-offstyle="primary" data-size="mini" data-style="pull-right icon-toggle" data-onstyle="warning" id="editProfile"/>
         </div>
     <div class="row">     
       <div class="col-md-4">
@@ -19,26 +19,26 @@
       </div>
       <div class="col-md-8">
         <div class="row"  id="profile-info">
-          <h3>Personal info</h3>
+          <h3>{{{__ 'Personal info'}}}</h3>
           <p>Hey there! I am Ipsum Lorem from Lorem island. Vivamus eu metus condimentum lectus ultrices aliquam eget in dui. Ut ultrices ante malesuada est consequat bibendum. Quisque sed metus lacinia mauris sollicitudin euismod nec ac sem. Aenean ac libero et purus sodales ornare fermentum porta lectus. Nam vel rhoncus lectus, ac mattis nunc. In posuere ante ut tempor tincidunt. Integer mattis vel lectus cursus aliquam. Morbi pretium sem massa, ac imperdiet massa elementum ac. Curabitur aliquet aliquam iaculis. Aliquam fermentum, diam id aliquam maximus, metus augue sodales justo, rutrum tincidunt ligula nunc nec ex. Vivamus cursus sodales magna, quis sodales nulla rhoncus ac. Curabitur euismod, dolor a malesuada viverra, dui lectus consectetur quam, sit amet tempus mi ex eu lectus. Donec sapien quam, gravida eu massa vel, maximus ornare nisi. Maecenas in ligula scelerisque, viverra mauris vel, gravida nisl. Nunc rhoncus efficitur tellus a posuere</p>
         </div>
         <div class="row">
           <ul class="details">
-            <li id="name"><span>Name</span><a>Ipsum Lorem</a></li>
-            <li id="birthday"><span>Birthday</span><a>1983-10-10</a></li>
-            <li id="address"><span>Address</span><a>Creative Avenue<a><a>11</a></li>
-            <li id="postalcode"><span>Postalcode</span><a>9005 MH</a></li>
-            <li id="city"><span>City</span><a>Wergea</a></li>
-            <li id="country"><span>Country</span><a>Netherlands</a></li>
-            <li id="email"><span>Email</span><a href="mailto:{{user.email}}" oldtitle="Get in touch">{{user.email}}</a></li>
-            <li id="phone"><span>Phone</span><a>+00 230 790-1171</a></li>
-            <li id="website"><span>Website</span> <a href="http://www.plexus.frl" oldtitle="plexus">www.plexus.frl</a></li>
+            <li id="name"><span>{{{__ 'Name'}}}</span><a>Ipsum Lorem</a></li>
+            <li id="birthday"><span>{{{__ 'Birthday'}}}</span><a>1983-10-10</a></li>
+            <li id="address"><span>{{{__ 'Address'}}}</span><a>Creative Avenue<a><a>11</a></li>
+            <li id="postalcode"><span>{{{__ 'Postalcode'}}}</span><a>9005 MH</a></li>
+            <li id="city"><span>{{{__ 'City'}}}</span><a>Wergea</a></li>
+            <li id="country"><span>{{{__ 'Country'}}}</span><a>Netherlands</a></li>
+            <li id="email"><span>{{{__ 'Email'}}}</span><a href="mailto:{{user.email}}" oldtitle="Get in touch">{{user.email}}</a></li>
+            <li id="phone"><span>{{{__ 'Phone'}}}</span><a>+00 230 790-1171</a></li>
+            <li id="website"><span>{{{__ 'Website'}}}</span> <a href="http://www.plexus.frl" oldtitle="plexus">www.plexus.frl</a></li>
         </ul>
         </div>
       </div>
       </div>
         <div class="row" id="recentwork-carousel">
-          <h3>Recent work</h3>  
+          <h3>{{{__ 'Recent work'}}}</h3>  
               <div class="carousel slide" id="recentWork" style="max-height:350px">
                 <div class="carousel-inner">
                   <div class="item active">
@@ -51,7 +51,7 @@
                     <div class="caption">
                       <h4>Praesent commodo</h4>
                       <p>Nullam Condimentum Nibh Etiam Sem</p>
-                      <a class="btn btn-mini" href="#">» Read More</a>
+                      <a class="btn btn-mini" href="#">{{{__ 'Read More'}}}</a>
                     </div>
                   </div>
                 </li>
@@ -63,7 +63,7 @@
                     <div class="caption">
                       <h4>Praesent commodo</h4>
                       <p>Nullam Condimentum Nibh Etiam Sem</p>
-                      <a class="btn btn-mini" href="#">» Read More</a>
+                      <a class="btn btn-mini" href="#">{{{__ 'Read More'}}}</a>
                     </div>
                   </div>
                 </li>
@@ -75,7 +75,7 @@
                     <div class="caption">
                       <h4>Praesent commodo</h4>
                       <p>Nullam Condimentum Nibh Etiam Sem</p>
-                      <a class="btn btn-mini" href="#">» Read More</a>
+                      <a class="btn btn-mini" href="#">{{{__ 'Read More'}}}</a>
                     </div>
                   </div>
                 </li>
@@ -87,7 +87,7 @@
                     <div class="caption">
                       <h4>Praesent commodo</h4>
                       <p>Nullam Condimentum Nibh Etiam Sem</p>
-                      <a class="btn btn-mini" href="#">» Read More</a>
+                      <a class="btn btn-mini" href="#">{{{__ 'Read More'}}}</a>
                     </div>
                   </div>
                 </li>
@@ -103,7 +103,7 @@
                           <div class="caption">
                             <h4>Praesent commodo</h4>
                             <p>Nullam Condimentum Nibh Etiam Sem</p>
-                            <a class="btn btn-mini" href="#">» Read More</a>
+                            <a class="btn btn-mini" href="#">{{{__ 'Read More'}}}</a>
                           </div>
                         </div>
                       </li>
@@ -115,7 +115,7 @@
                           <div class="caption">
                             <h4>Praesent commodo</h4>
                             <p>Nullam Condimentum Nibh Etiam Sem</p>
-                            <a class="btn btn-mini" href="#">» Read More</a>
+                            <a class="btn btn-mini" href="#">{{{__ 'Read More'}}}</a>
                           </div>
                         </div>
                       </li>
@@ -127,7 +127,7 @@
                           <div class="caption">
                             <h4>Praesent commodo</h4>
                             <p>Nullam Condimentum Nibh Etiam Sem</p>
-                            <a class="btn btn-mini" href="#">» Read More</a>
+                            <a class="btn btn-mini" href="#">{{{__ 'Read More'}}}</a>
                           </div>
                         </div>
                       </li>
@@ -139,7 +139,7 @@
                           <div class="caption">
                             <h4>Praesent commodo</h4>
                             <p>Nullam Condimentum Nibh Etiam Sem</p>
-                            <a class="btn btn-mini" href="#">» Read More</a>
+                            <a class="btn btn-mini" href="#">{{{__ 'Read More'}}}</a>
                           </div>
                         </div>
                       </li>
@@ -155,7 +155,7 @@
                           <div class="caption">
                             <h4>Praesent commodo</h4>
                             <p>Nullam Condimentum Nibh Etiam Sem</p>
-                            <a class="btn btn-mini" href="#">» Read More</a>
+                            <a class="btn btn-mini" href="#">{{{__ 'Read More'}}}</a>
                           </div>
                         </div>
                       </li>
@@ -167,7 +167,7 @@
                           <div class="caption">
                             <h4>Praesent commodo</h4>
                             <p>Nullam Condimentum Nibh Etiam Sem</p>
-                            <a class="btn btn-mini" href="#">» Read More</a>
+                            <a class="btn btn-mini" href="#">{{{__ 'Read More'}}}</a>
                           </div>
                         </div>
                       </li>
@@ -179,7 +179,7 @@
                           <div class="caption">
                             <h4>Praesent commodo</h4>
                             <p>Nullam Condimentum Nibh Etiam Sem</p>
-                            <a class="btn btn-mini" href="#">» Read More</a>
+                            <a class="btn btn-mini" href="#">{{{__ 'Read More'}}}</a>
                           </div>
                         </div>
                       </li>
@@ -191,7 +191,7 @@
                           <div class="caption">
                             <h4>Praesent commodo</h4>
                             <p>Nullam Condimentum Nibh Etiam Sem</p>
-                            <a class="btn btn-mini" href="#">» Read More</a>
+                            <a class="btn btn-mini" href="#">{{{__ 'Read More'}}}</a>
                           </div>
                         </div>
                       </li>
