Added flags for language switching

--- a/config/dev-css/base.less
+++ b/config/dev-css/base.less
@@ -12,6 +12,9 @@
 @import (less) "./../../bower_components/summernote/dist/summernote.css";
 @import (less) "./../../bower_components/summernote/dist/summernote-bs3.css";
 
+/* SVG Flags */
+@import (less) "./../../bower_components/flag-icon-css/css/flag-icon.css";
+
 /* Toggle css */
 @import "toggle.less";
 @import (less) "side-toggle.css";
