added user language selection saved trough session

--- a/views/layouts/sidebar.hbs
+++ b/views/layouts/sidebar.hbs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html>
   <head>
     <title>{{{__ "Plexus"}}}</title>   
     <link rel="apple-touch-icon" sizes="57x57" href="/favicons/images/apple-icon-57x57.png">
