Small profile mongo commit

--- a/views/layouts/clean.hbs
+++ b/views/layouts/clean.hbs
@@ -36,6 +36,7 @@
     </header> <!-- .cd-main-header -->
     <main class="main-content">
         <div class="content-wrapper">
+        {{> alerts}}
         {{{body}}}
         </div> <!-- .content-wrapper -->
     </main> <!-- .cd-main-content -->
