--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -20,12 +20,12 @@
       <div class="col-md-8">
         <div class="row"  id="profile-info">
           <h3>{{{__ 'Personal info'}}}</h3>
-          <p>{{user.info.personal_text}}</p>
+          <p>{{{user.info.personal_text}}}</p>
         </div>
         <div class="row">
           <ul class="details">
             <li id="name"><span>{{{__ 'Name'}}}</span><a>{{user.name}}</a></li>
-            <li id="birthday"><span>{{{__ 'Birthday'}}}</span><a>{{user.birthday}}</a></li>
+            <li id="birthday"><span>{{{__ 'Birthday'}}}</span><a>{{birthday}}</a></li>
             <li id="address"><span>{{{__ 'Address'}}}</span><a>{{user.address.street}}<a><a>11</a></li>
             <li id="postalcode"><span>{{{__ 'Postalcode'}}}</span><a>{{user.address.postalcode}}</a></li>
             <li id="city"><span>{{{__ 'City'}}}</span><a>{{user.address.city}}</a></li>
