--- a/views/layouts/partials/alerts.hbs
+++ b/views/layouts/partials/alerts.hbs
@@ -1,10 +1,21 @@
-{{#if error}}
-<div class="alert alert-danger alert-dismissible" role="alert">
+{{#if info}}
+<div class="alert alert-info alert-dismissible" role="alert">
   <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-  <strong>Danger!</strong> {{error}}.
+  <strong>Info!</strong> {{info}}.
 </div>
 {{/if}}
-
+{{#if warning}}
+<div class="alert alert-warning alert-dismissible" role="alert">
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+  <strong>Warning!</strong> {{warning}}.
+</div>
+{{/if}}
+{{#if errors}}
+<div class="alert alert-danger alert-dismissible" role="alert">
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+  <strong>Error!</strong> {{errors}}.
+</div>
+{{/if}}
 {{#if success}}
 <div class="alert alert-success alert-dismissible" role="alert">
   <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
