--- a/config/dev-css/base.less
+++ b/config/dev-css/base.less
@@ -2,6 +2,7 @@
 @import (less) "./../../bower_components/datatables/media/css/jquery.dataTables.css";
 @import (less) "./../../bower_components/bootstrap/dist/css/bootstrap.css";
 @import (less) "./../../bower_components/bootstrap-fileinput/css/fileinput.css";
+@import (less) "./../../bower_components/cropper/dist/cropper.css";
 @import (less) "./../../bower_components/font-awesome/css/font-awesome.css";
 @import (less) "./../../bower_components/datatables/media/css/dataTables.bootstrap.css";
 
@@ -21,6 +22,7 @@
 
 /* Internal dev theme css file */
 @import (less) "./../../config/theme/css/datatables-theme.css";
+@import (less) "datatables.css";
 @import (less) "./../../config/theme/css/summernote-theme.css";
 @import (less) "./../../config/theme/css/fonts-theme.css";
 @import (less) "./../../config/theme/css/yeti.css";
@@ -30,4 +32,5 @@
 @import (less) "./../../config/theme/css/lock.css";
 @import (less) "./../../config/theme/css/login.css";
 @import (less) "./../../config/theme/css/user-profile.css";
+@import (less) "./../../config/theme/css/user-management.css";
 @import (less) "./../../config/theme/css/user-settings.css";
