--- a/config/theme/css/user-profile.css
+++ b/config/theme/css/user-profile.css
@@ -2,19 +2,8 @@
 * @Author: JB Stoker
 * @Date:   2016-01-27
 * @Last Modified by:   JB Stoker
-* @Last Modified time: 2016-02-13
+* @Last Modified time: 2016-03-14 12:01:55
 */
-/* Profile page css */
-
-  .toggle.icon-toggle, .toggle-on.icon-toggle, .toggle-off.icon-toggle { border-radius: 5px; }
-  .toggle.icon-toggle .toggle-handle { border-radius: 5px; }
-  .toggle-on {
-    line-height: 18px !important;
-}
-.toggle-off {
-    line-height: 18px !important;
-}
-
 /*Save Changes buttons */
 #saveChanges{
     display:none;
