--- a/views/admin/index.hbs
+++ b/views/admin/index.hbs
@@ -11,36 +11,37 @@
     <ul class="cd-tabs-content">
         <li data-content="users" class="selected row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-mlg12 horizontaltab-form well">
-        <form class="form-inline">
+        <form class="form-inline" id="user-form" method="POST" action="">
           <div class="col-xs-12 col-md-6 col-md-6 col-lg-3"> 
             <div class="form-group">
               <label class="sr-only" for="user-name">{{{__ "Name"}}}</label>
-                  <input type="text" class="form-control" id="user-name" placeholder="{{{__ 'Jane Doe'}}}">
+                  <input type="text" class="form-control" id="user-name" name="user-name" placeholder="{{{__ 'Jane Doe'}}}">
             </div>
           </div>
           <div class="col-xs-12 col-md-6 col-md-6 col-lg-3">    
           <div class="form-group">
             <label class="sr-only" for="user-email">{{{__ "Email"}}}</label>
-                <input type="email" class="form-control" id="user-email" placeholder="{{{__ 'jane.doe@example.com'}}}">
+                <input type="email" class="form-control" id="user-email" name="user-email" placeholder="{{{__ 'jane.doe@example.com'}}}">
          </div>
           </div>
           <div class="col-xs-8 col-sm-8 col-md-8 col-lg-2">   
          <div class="form-group">
             <label class="sr-only" for="user-role">{{{__ "Role"}}}</label>
-                <select class="form-control" id="user-role">
-                    <option>Role 1</option>
-                    <option>Role 2</option>
+                <select class="form-control" id="user-role" name="user-role">
+                   {{#each roles}}
+                      <option value="{{this.id}}">{{this.name}}</option>                      
+                    {{/each}}
                 </select>
         </div>
           </div>
           <div class="col-xs-4 col-sm-4 col-md-2 col-lg-2"> 
          <div class="form-group">
-                <input type="checkbox" checked class="form-control" data-width="100%" data-height="38px" data-toggle="toggle" data-on="{{{__ 'Accepted'}}}" data-off="{{{__ 'Blocked'}}}" data-offstyle="danger" data-onstyle="success" id="user-accepted"/>   
+                <input type="checkbox" data-size="mini" checked class="form-control" data-width="100%" data-height="38px" data-toggle="toggle" data-on="{{{__ 'Accepted'}}}" data-off="{{{__ 'Blocked'}}}" data-offstyle="danger" data-onstyle="success" id="user-accepted" name="user-accepted"/>   
          </div>
           </div>
           <div class="col-xs-4 col-sm-4 col-md-2 col-lg-2">
           <div class="form-group">
-                <button type="submit" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 btn btn-primary">{{{__ "Save User"}}}</button>
+                <button type="submit" id="btn-saveUser" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 btn btn-primary">{{{__ "Save User"}}}</button>
             </div> 
           </div>
         </form>  
@@ -70,34 +71,39 @@
         </li>
         <li data-content="roles" class="row">
         <div class="col-md-12 horizontaltab-form well">
-            <form class="form-inline">
-              <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+            <form class="form-inline" action="/create-role" method="POST">
+              <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
               <div class="form-group">
                 <label class="sr-only" for="role-name">{{{__ "Rolename"}}}</label>
-                    <input type="text" class="form-control" id="role-name" placeholder="{{{__ 'Rolename'}}}">
+                    <input type="text" class="form-control" name="role_name" id="role-name" placeholder="{{{__ 'Rolename'}}}">
               </div>
               </div>
-              <div class="col-xs-12 col-sm-6 col-md-3 col-lg-2">
+              <div class="col-xs-12 col-sm-6 col-md-2 col-lg-1">
               <div class="form-group">
-                    <input type="checkbox" class="form-control" checked data-width="100%" data-height="38px" data-toggle="toggle" data-on="{{{__ 'Can Read'}}}" data-off="{{{__ 'No Reading'}}}" data-offstyle="danger" data-onstyle="success" id="role-read"/>  
+                    <input type="checkbox" data-size="mini" class="form-control" checked data-width="100%" data-height="38px" data-toggle="toggle" data-on="{{{__ 'Can Read'}}}" data-off="{{{__ 'No Reading'}}}" data-offstyle="danger" data-onstyle="success" name="role_read" id="role-read"/>  
              </div>
               </div>
-             <div class="col-xs-12 col-sm-6 col-md-3 col-lg-2">
+             <div class="col-xs-12 col-sm-6 col-md-2 col-lg-1">
               <div class="form-group">
-                    <input type="checkbox" class="form-control" data-width="100%" data-height="38px" data-toggle="toggle"  data-on="{{{__ 'Can Write'}}}" data-off="{{{__ 'No Writing'}}}" data-offstyle="danger" data-onstyle="success" id="role-write"/>   
+                    <input type="checkbox" data-size="mini" class="form-control" data-width="100%" data-height="38px" data-toggle="toggle"  data-on="{{{__ 'Can Write'}}}" data-off="{{{__ 'No Writing'}}}" data-offstyle="danger" data-onstyle="success" name="role_write" id="role-write"/>   
               </div>
              </div>
-             <div class="col-xs-12 col-sm-6 col-md-3 col-lg-2">
+             <div class="col-xs-12 col-sm-6 col-md-2 col-lg-1">
               <div class="form-group">
-                    <input type="checkbox" class="form-control" data-width="100%" data-height="38px" data-toggle="toggle"  data-on="{{{__ 'Can Edit'}}}" data-off="{{{__ 'No Editing'}}}" data-offstyle="danger" data-onstyle="success" id="role-edit"/>
+                    <input type="checkbox" data-size="mini" class="form-control" data-width="100%" data-height="38px" data-toggle="toggle"  data-on="{{{__ 'Can Edit'}}}" data-off="{{{__ 'No Editing'}}}" data-offstyle="danger" data-onstyle="success" name="role_edit" id="role-edit"/>
               </div>
              </div>
-             <div class="col-xs-12 col-sm-6 col-md-3 col-lg-2">
+             <div class="col-xs-12 col-sm-6 col-md-2 col-lg-1">
               <div class="form-group">
-                    <input type="checkbox" class="form-control" data-width="100%" data-height="38px" data-toggle="toggle"  data-on="{{{__ 'Can Delete'}}}" data-off="{{{__ 'No Deleting'}}}" data-offstyle="danger" data-onstyle="success" id="role-delete"/>   
+                    <input type="checkbox" data-size="mini" class="form-control" data-width="100%" data-height="38px" data-toggle="toggle"  data-on="{{{__ 'Can Publish'}}}" data-off="{{{__ 'No Publishing'}}}" data-offstyle="danger" data-onstyle="success" name="role_publish" id="role-publish"/>   
               </div>
              </div>
-              <div class="col-xs-12 col-sm-6 col-md-3 col-lg-2">
+             <div class="col-xs-12 col-sm-6 col-md-2 col-lg-1">
+              <div class="form-group">
+                    <input type="checkbox" data-size="mini" class="form-control" data-width="100%" data-height="38px" data-toggle="toggle"  data-on="{{{__ 'Can Delete'}}}" data-off="{{{__ 'No Deleting'}}}" data-offstyle="danger" data-onstyle="success" name="role_del" id="role-delete"/>   
+              </div>
+             </div>
+              <div class="col-xs-12 col-sm-6 col-md-2 col-lg-1">
               <div class="form-group">
                     <button type="submit" class="col-md-12 btn btn-primary">{{{__ "Save Role"}}}</button>
               </div>
@@ -114,7 +120,8 @@
                         <th>{{{__ "Read"}}}</th>
                         <th>{{{__ "Write"}}}</th>
                         <th>{{{__ "Edit"}}}</th>
-                        <th>{{{__ "Accept"}}}</th>
+                        <th>{{{__ "Delete"}}}</th>
+                        <th>{{{__ "Publish"}}}</th>
                         <th>{{{__ "Modify"}}}</th>
                         <th>{{{__ "Trash"}}}</th>
                     </tr>
