--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -1,17 +1,12 @@
 <div class="container">
-    <form method="post" action="/update-user/{{user.id}}">
+    <form method="post" action="/update-profile/{{user.id}}">
         <div class="row">
             <button class="btn btn-sm btn-warning" id="saveChanges">{{{__ "Save Changes"}}}</button><input type="checkbox" class="input-sm" data-height="30px" data-toggle="toggle" data-on="<svg style='height:20px' class='icon-edit-3'><use xlink:href='/fonts/icons.svg#icon-edit-3'></use></svg>" data-off="<svg style='height:20px' class='icon-preview-1'><use xlink:href='/fonts/icons.svg#icon-preview-1'></use></svg>" data-offstyle="primary" data-size="mini" data-style="pull-right icon-toggle" data-onstyle="warning" id="editProfile"/>
         </div>
     <div class="row">     
       <div class="col-md-4">
-      <div class="row" id="profile-image">
-      <div id="kv-avatar-errors" class="center-block" style="width:100%;display:none"></div>
-        <form class="text-center" action="/avatar_update/{{user.id}}" method="post" enctype="multipart/form-data">
-            <div class="kv-avatar center-block col-md-12">
-                <input id="avatar" type="file" class="file-loading">
-            </div>
-        </form>
+      <div class="row" id="profile-image" data-img="{{user.avatar}}" data-x="" data-y="" data-width="" data-height="" data-user="{{user.id}}">
+      <img src="/uploads/avatar/{{user.avatar}}"  width="100%" class="img-responsive img-thumbnail"/>
       </div>
       <div class="row" id="profile-quote">
         <blockquote>{{user.info.quote}}</blockquote>
@@ -20,7 +15,7 @@
       <div class="col-md-8">
         <div class="row"  id="profile-info">
           <h3>{{{__ 'Personal info'}}}</h3>
-          <p>{{{user.info.personal_text}}}</p>
+          <div class="info-text">{{{user.info.personal_text}}}</div>
         </div>
         <div class="row">
           <ul class="details">
